@@ -31,6 +31,8 @@
 
 	* lib/qwik/act-status.rb: Add test cases.
 
+	* lib/qwik/act-history.rb: TimeMachine function is disabled.
+
 2009-09-02  Kouichirou Eto  <2009@eto.com.nospam.com>
 
 	* lib/qwik/act-metadata.rb: Do not cache SiteMetadata object.
